Fix project images overflow

--- a/src/styles/Slider.css
+++ b/src/styles/Slider.css
@@ -18,5 +18,5 @@
   display: block;
   width: 90%;
   height: 85%;
-  object-fit: cover;
+  object-fit: contain;
 }
